crates/validation/tests/snapshots/scenario_tests__shuffle_is_missing.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/derive/transforms/0,
        error: transform halveIntString is missing `shuffle`, which is now a required field (https://go.estuary.dev/LK19Py). If you're unsure of what shuffle to use, try `shuffle: any`,
    },
]
