crates/validation/tests/snapshots/scenario_tests__shuffle_key_empty.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse/derivation/transform/reverseIntString,
        error: transform reverseIntString shuffle key cannot be empty,
    },
]
