crates/validation/tests/snapshots/scenario_tests__shuffle_key_is_implicit.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/derive/transforms/0/shuffle/key,
        error: transform halveIntString shuffle key is already the collection key of testing/int-string-rw and should be omitted here,
    },
]
