crates/validation/tests/snapshots/scenario_tests__shuffle_key_types_mismatch.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/derivation/transform/halveIntString,
        error: transform halveIntString shuffled key types ["integer", "string"] don't align with transform halveSelf types ["string", "integer"],
    },
]
