crates/validation/tests/snapshots/scenario_tests__shuffle_needs_explicit_types.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/derive/transforms,
        error: cannot infer shuffle key types because all transforms use a computed `lambda` or `any`.
        Flow must know the key types that your computed shuffle lambda will output.
        Please add an explicit `shuffleKeyTypes` to this derivation.,
    },
]
