crates/validation/tests/snapshots/scenario_tests__storage_mappings_not_imported.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve,
        error: collection references storageMapping testing/, defined at test://example/array-key#/storageMappings/testing~1, without importing it or being imported by it,
    },
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse,
        error: collection references storageMapping testing/, defined at test://example/array-key#/storageMappings/testing~1, without importing it or being imported by it,
    },
    Error {
        scope: test://example/int-string#/collections/testing~1int-string,
        error: collection references storageMapping testing/, defined at test://example/array-key#/storageMappings/testing~1, without importing it or being imported by it,
    },
    Error {
        scope: test://example/int-string#/collections/testing~1int-string.v2,
        error: collection references storageMapping testing/, defined at test://example/array-key#/storageMappings/testing~1, without importing it or being imported by it,
    },
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/derivation,
        error: derivation references storageMapping recovery/testing/, defined at test://example/array-key#/storageMappings/recovery~1testing~1, without importing it or being imported by it,
    },
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse/derivation,
        error: derivation references storageMapping recovery/testing/, defined at test://example/array-key#/storageMappings/recovery~1testing~1, without importing it or being imported by it,
    },
    Error {
        scope: test://example/int-string-captures#/captures/testing~1db-cdc,
        error: capture references storageMapping recovery/testing/, defined at test://example/array-key#/storageMappings/recovery~1testing~1, without importing it or being imported by it,
    },
    Error {
        scope: test://example/int-string-captures#/captures/testing~1s3-source,
        error: capture references storageMapping recovery/testing/, defined at test://example/array-key#/storageMappings/recovery~1testing~1, without importing it or being imported by it,
    },
    Error {
        scope: test://example/db-views#/materializations/testing~1db-views,
        error: materialization references storageMapping recovery/testing/, defined at test://example/array-key#/storageMappings/recovery~1testing~1, without importing it or being imported by it,
    },
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries,
        error: materialization references storageMapping recovery/testing/, defined at test://example/array-key#/storageMappings/recovery~1testing~1, without importing it or being imported by it,
    },
]
